--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="tfe_pe_tv_pose_classification">Pose Classification</string>
     <string name="this_">This feature has not been activated yet
         We are still working on it :( </string>
+    <string name="take_a_screenshot">take a screenshot</string>
     <string-array name="tfe_pe_models_array">
         <item>OnePose</item>
         <item>MultiPose</item>
